syntax = "proto3";
package proto;
option go_package = "./proto";

message GetRequest {
    string user = 1;
}

message GetResponse {
    bytes value = 1;
}

message Empty {}

service Authorize {
    rpc Get(GetRequest) returns (GetResponse);
}
